--- a/.gitattributes
+++ b/.gitattributes
@@ -15,5 +15,7 @@
 *.sh     text eol=lf
 *.txt    text eol=lf
 
-Dockerfile text eol=lf
-LICENSE    text eol=lf
+.gitattributes text eol=lf
+.gitignore     text eol=lf
+Dockerfile     text eol=lf
+LICENSE        text eol=lf
